--- a/figmatask.html
+++ b/figmatask.html
@@ -84,7 +84,7 @@ button:hover {
 </head>
 <body>
 	    <section id="header">
-	    <img src="C:\Users\malat\Downloads\Group 8016.png">
+	    <img src="Group 8016.png">
         <div>
             <ul id="navbar">
                 <li><a href="">Home</a></li>
@@ -107,7 +107,7 @@ button:hover {
          			<p>With every client we serve, we bring forth a deep passion for creative problem-solving and digital innovations- that's what we deliver. We’ve Great minds at work for the best technologies to make digital easy and impactful.</p>
          		</div>
          		<div class="col-md-6">
-         			<img src="C:\Users\malat\Pictures\Screenshots\Default.svg" width="850px" height="400px">
+         			<img src="Default.svg" width="850px" height="400px">
          		</div>
          	</div>
         </div>
@@ -122,10 +122,10 @@ button:hover {
     </p>
     </div>
     <div class="col-md-6">
-    <img src="C:\Users\malat\Downloads\Frame 2.svg">Define Clear Goals and Objectives<br>Our strategy begins with a crystal-clear roadmap. We work closely with you to define specific, measurable, & achievable goals.<br>
-    <img src="C:\Users\malat\Downloads\Group 8332.svg">Target Audience<br>We dive deep to understand your audience, forging connections that transform visitors into loyal customers.<br>
-    <img src="C:\Users\malat\Downloads\Frame 29.svg">Right Digital Channels<br>We're like online detectives, discovering where your customers are, and then we craft posts and ads that perfectly fit.<br>
-    <img src="C:\Users\malat\Downloads\Group 8330.svg">Analytics and Reporting<br>We use analytics for precise campaign monitoring, tracking website traffic, engagement, and conversions.
+    <img src="Frame 2.svg">Define Clear Goals and Objectives<br>Our strategy begins with a crystal-clear roadmap. We work closely with you to define specific, measurable, & achievable goals.<br>
+    <img src="Group 8332.svg">Target Audience<br>We dive deep to understand your audience, forging connections that transform visitors into loyal customers.<br>
+    <img src="Frame 29.svg">Right Digital Channels<br>We're like online detectives, discovering where your customers are, and then we craft posts and ads that perfectly fit.<br>
+    <img src="Group 8330.svg">Analytics and Reporting<br>We use analytics for precise campaign monitoring, tracking website traffic, engagement, and conversions.
     </div>
     <div class="container">
     <h1>TELL US</h1>
